[package]
name = "ecies-wasm"
version = "0.2.0"
# docs
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "A WASM binding for eciesrs"
edition = "2021"
keywords = [
  "secp256k1",
  "crypto",
  "ecc",
  "ecies",
  "cryptocurrency",
]
license = "MIT"
readme = "README.md"

# links
documentation = "https://www.npmjs.com/package/ecies-wasm/"
homepage = "https://ecies.org/rs-wasm/"
repository = "https://github.com/ecies/rs-wasm"

[dependencies]
ecies = {version = "0.2", default-features = false, features = ["pure"]}
once_cell = {version = "1.18.0", default-features = false, features = ["std"]}

# specify "lazy-static-context" to reduce wasm size
libsecp256k1 = {version = "0.7.1", default-features = false, features = ["lazy-static-context"]}

# wasm
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "z"
